Completed the compliance tests

--- a/notebooks/iros2020.Rmd
+++ b/notebooks/iros2020.Rmd
@@ -3370,8 +3370,8 @@ print(performance::r2(ax_reliance_time.model.null))
 print(tidy_stan(ax_reliance_time.model.t, effects = "fixed"))
 print(performance::r2(ax_reliance_time.model.t))
 
-print(tidy_stan(ax_reliance_time.model.t, effects = "fixed"))
-print(performance::r2(ax_reliance_time.model.t))
+print(tidy_stan(ax_reliance_time.model.v, effects = "fixed"))
+print(performance::r2(ax_reliance_time.model.v))
 ```
 
 Diagnostics of the fit:
@@ -3395,7 +3395,7 @@ plot(ax_reliance_time.model.v$criteria$loo, main = "Values Model")
 # Include posterior predictive checks of the sampling (are sampling according
 # to the data that we actually have?)
 # mcmc_intervals(as.matrix(ax_reliance_time.model.null), regex_pars = "b_", prob = 0.90, prob_outer = 0.95) +
-  ggtitle("Null Model")
+#   ggtitle("Null Model")
 
 p1 = pp_check(ax_reliance_time.model.t, group = "has_ax", stat = "median") + ggtitle("t:has_ax")
 p2 = pp_check(ax_reliance_time.model.t, group = "has_dx") + ggtitle("t:has_dx")
@@ -3415,28 +3415,33 @@ mcmc_intervals(as.matrix(ax_reliance_time.model.v), regex_pars = "b_|^ndt", prob
 preds_p_df = ax_reliance_time.model.null %>% predict() %>% as_tibble()
 p1 =
   preds_p_df %>%
-    add_column(ax_response_time = ax_reliance_time.model.null$data$ax_decision_duration) %>%
-    ggplot(aes(x = ax_response_time, y = Estimate)) +
+    add_column(ax_response_time = ax_reliance_time.model.null$data$ax_decision_duration,
+               optimal_ax = ax_reliance_time.model.v$data$optimal_ax) %>%
+    ggplot(aes(x = ax_response_time, y = Estimate, color = optimal_ax, group = optimal_ax)) +
       geom_point() +
       scale_x_log10() + scale_y_log10() +
       labs(y = "Predicted values") +
-      ggtitle("Null Model")
+      ggtitle("Null Model") +
+      theme(legend.position = "bottom")
 
 preds_p_df = ax_reliance_time.model.t %>% predict() %>% as_tibble()
 p3 =
   preds_p_df %>%
-    add_column(ax_response_time = ax_reliance_time.model.t$data$ax_decision_duration) %>%
-    ggplot(aes(x = ax_response_time, y = Estimate)) +
+    add_column(ax_response_time = ax_reliance_time.model.t$data$ax_decision_duration,
+               optimal_ax = ax_reliance_time.model.t$data$optimal_ax) %>%
+    ggplot(aes(x = ax_response_time, y = Estimate, color = optimal_ax, group = optimal_ax)) +
       geom_point() +
       scale_x_log10() + scale_y_log10() +
       labs(y = "Predicted values") +
-      ggtitle("Trends Model")
+      ggtitle("Trends Model") +
+      legend_none()
 
 preds_p_df = ax_reliance_time.model.v %>% predict() %>% as_tibble()
 p5 =
   preds_p_df %>%
-    add_column(ax_response_time = ax_reliance_time.model.v$data$ax_decision_duration) %>%
-    ggplot(aes(x = ax_response_time, y = Estimate)) +
+    add_column(ax_response_time = ax_reliance_time.model.v$data$ax_decision_duration,
+               optimal_ax = ax_reliance_time.model.v$data$optimal_ax) %>%
+    ggplot(aes(x = ax_response_time, y = Estimate, color = optimal_ax, group = optimal_ax)) +
       geom_point() +
       scale_x_log10() + scale_y_log10() +
       labs(y = "Predicted values") +
@@ -3470,7 +3475,8 @@ h_df = as_tibble(insight::get_parameters(ax_reliance_time.model.t)) %>%
     has_ax_test = -2 * b_has_ax1,
     has_dx_test = -2 * b_has_dx1,
     noise_levelL_test = b_noise_level.L,
-    noise_levelQ_test = b_noise_level.Q
+    noise_levelQ_test = b_noise_level.Q,
+    optimal_ax_test = -2 * b_optimal_ax1
   )
 
 hyp_results = test_hypotheses(h_df, rope_values = c(-0.49, 0.49))
@@ -3483,7 +3489,8 @@ h_df = as_tibble(insight::get_parameters(ax_reliance_time.model.v)) %>%
     has_dx_test = -2 * b_has_dx1,
     noise_level1_test = b_noise_level_f1,
     noise_level2_test = b_noise_level_f2,
-    noise_level3_test = - b_noise_level_f1 - b_noise_level_f2
+    noise_level3_test = - b_noise_level_f1 - b_noise_level_f2,
+    optimal_ax_test = -2 * b_optimal_ax1
   )
 
 hyp_results = test_hypotheses(h_df, rope_values = c(-0.49, 0.49))
@@ -3493,7 +3500,12 @@ options(digits = 7)
 
 **Results**:
 
-There is no significant effect of any of the suggestions parameters on the time taken to pick an action. There is a certain effect of being reliant on the suggestions vs. not, but the effect is not significant.
+There is no significant effect of any of the suggestions parameters on the time taken to pick an action. Based on [pd] values, insignificant effects exist of:
+
+1. Choosing the optimal action (certain effect; p < 0.001)
+1. Having action suggestions (possible effect; p < .1)
+1. A quadratic relationship to noise (possible effect; p < .1)
+1. An effect of level 1 noise (possible effect; p < .1)
 
 (The ROPE is defined as [-0.49, 0.49]. It corresponds to a reaction time of slightly less than a second and is obtained from `0.1 \times MAD(ax\_response\_time)`. Therefore, a change of less than 0.55 actions in either direction is considered no different from a change of 0 in the number of actions)
 
@@ -3511,11 +3523,468 @@ gc()
 
 ```{r}
 plot_df = actions %>%
+  filter(has_ax == T) %>%
   select(X1, id, user_id, study_condition, start_condition, num_optimal,
          state_idx, state_idx_rescaled,
          age_group, gender, robot_experience,
          noise_level, noise_level_f, has_noise, has_dx, has_ax,
          scenario_completed, num_actions, chose_ax,
+         decision_duration, ax_decision_duration) %>%
+  mutate(chose_ax = factor(chose_ax))
+
+text_short(report(plot_df))
+```
+
+```{r fig.height=7, fig.width=15}
+# Plot by the study condition
+p1 =
+  plot_df %>%
+    mutate(.fill_column = paste(noise_level, !(study_condition == 'BASELINE'), sep = ":")) %>%
+    ggplot(aes(study_condition, ax_decision_duration, fill = .fill_column)) +
+      geom_boxplot() +
+      geom_count() +
+      scale_y_log10() +
+      labs(y = "Log(AX Decision Duration)", fill = "noise:has_suggestions") +
+      scale_fill_economist()
+
+p2 =
+  plot_df %>%
+    mutate(.fill_column = paste(noise_level, !(study_condition == 'BASELINE'), sep = ":")) %>%
+    ggplot(aes(study_condition, decision_duration, fill = .fill_column)) +
+      geom_boxplot() +
+      geom_count() +
+      scale_y_log10() +
+      labs(y = "Log(Decision Duration)", fill = "noise:has_suggestions") +
+      scale_fill_economist()
+
+grid.arrange(p1, p2, ncol = 2)
+
+# Visualize the data by the three variables that we care about
+gg_df = plot_df %>%
+  mutate(.fill_column = paste(noise_level, !(study_condition == 'BASELINE'), sep = ":")) %>%
+  mutate(noise_level = fct_rev(noise_level))
+
+p1 = gg_df %>%
+  ggplot(aes(has_ax, ax_decision_duration, fill=chose_ax)) +
+    geom_boxplot() +
+    geom_count(aes(colour = chose_ax), position = position_jitterdodge()) +
+    scale_y_log10() +
+    facet_grid(rows = vars(noise_level), cols = vars(has_dx), labeller = label_both) +
+    labs(y = "Log(AX Decision Duration)") +
+    scale_fill_economist()
+
+p2 = gg_df %>%
+  ggplot(aes(has_dx, ax_decision_duration, fill=chose_ax)) +
+    geom_boxplot() +
+    geom_count(aes(colour = chose_ax), position = position_jitterdodge()) +
+    scale_y_log10() +
+    facet_grid(rows = vars(noise_level), cols = vars(has_ax), labeller = label_both) +
+    labs(y = "Log(AX Decision Duration)") +
+    scale_fill_economist()
+
+p3 = gg_df %>%
+  mutate(noise_level = fct_rev(noise_level)) %>%
+  mutate(has_ax = factor(has_ax)) %>%
+  mutate(has_ax = fct_rev(has_ax)) %>%
+  ggplot(aes(noise_level, ax_decision_duration, fill=chose_ax)) +
+    geom_boxplot() +
+    geom_count(aes(colour = chose_ax), position = position_jitterdodge()) +
+    scale_y_log10() +
+    facet_grid(rows = vars(has_ax), cols = vars(has_dx), labeller = label_both) +
+    labs(y = "Log(AX Decision Duration)") +
+    scale_fill_economist() +
+    legend_none()
+
+grid.arrange(p1, p2, p3, ncol = 3)
+
+# Visualize also the variation in each of the three levels that we care about
+p1 = gg_df %>%
+  ggplot(aes(ax_decision_duration, group = chose_ax, fill = chose_ax)) +
+    geom_density(position = "identity", alpha = 0.5) +
+    facet_grid(rows = vars(has_ax)) +
+    scale_fill_economist() +
+    scale_x_continuous(trans = "log") +
+    legend_none()
+
+p2 = gg_df %>%
+  ggplot(aes(ax_decision_duration, group = chose_ax, fill = chose_ax)) +
+    geom_density(position = "identity", alpha = 0.5) +
+    facet_grid(rows = vars(has_dx)) +
+    scale_fill_economist() +
+    scale_x_continuous(trans = "log") +
+    theme(legend.position = "bottom")
+
+p3 = gg_df %>%
+  ggplot(aes(ax_decision_duration, group = chose_ax, fill = chose_ax)) +
+    geom_density(position = "identity", alpha = 0.5) +
+    facet_grid(rows = vars(noise_level)) +
+    scale_fill_economist() +
+    scale_x_continuous(trans = "log") +
+    legend_none()
+
+grid.arrange(p1, p2, p3, ncol = 3)
+```
+
+Checking some probability distributions of the durations (given the above plots):
+
+```{r}
+# Run a few simple distribution fitting tests using the action
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_ax == T, chose_ax == 1) %>%
+                         pull(ax_decision_duration),
+                       "lognormal", "AX = T, OPT = T; lognormal:", use_mass = T)
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_ax == T, chose_ax == 1) %>%
+                         pull(ax_decision_duration),
+                       "exponential", "AX = T, OPT = T; exponential:", use_mass = T)
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_ax == T, chose_ax == 1) %>%
+                         pull(ax_decision_duration),
+                       "gamma", "AX = T, OPT = T; gamma:", use_mass = T)
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_ax == T) %>%
+                         pull(ax_decision_duration),
+                       "lognormal", "AX = T; lognormal:", use_mass = T)
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_ax == T) %>%
+                         pull(ax_decision_duration),
+                       "exponential", "AX = T; exponential:", use_mass = T)
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_ax == T) %>%
+                         pull(ax_decision_duration),
+                       "gamma", "AX = T; gamma:", use_mass = T)
+
+# Try a couple of other predictor variables
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_dx == T, chose_ax == 1) %>%
+                         pull(ax_decision_duration),
+                       "lognormal", "DX = T, OPT = T; lognormal:", use_mass = T)
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_dx == T, chose_ax == 1) %>%
+                         pull(ax_decision_duration),
+                       "exponential", "DX = T, OPT = T; exponential:", use_mass = T)
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_dx == T, chose_ax == 1) %>%
+                         pull(ax_decision_duration),
+                       "gamma", "DX = T, OPT = T; gamma:", use_mass = T)
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_dx == T) %>%
+                         pull(ax_decision_duration),
+                       "lognormal", "DX = T; lognormal:", use_mass = T)
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_dx == T) %>%
+                         pull(ax_decision_duration),
+                       "exponential", "DX = T; exponential:", use_mass = T)
+x = fit_and_print_dist(plot_df %>%
+                         filter(has_dx == T) %>%
+                         pull(ax_decision_duration),
+                       "gamma", "DX = T; gamma:", use_mass = T)
+rm(x)
+
+# If we are training models, then try to use brms to also test this
+if (train_models) {
+  lognormal.model = brm(
+    ax_decision_duration ~ 0 + Intercept + (1 | user_id),
+    family = lognormal,
+    data = plot_df,
+    seed = default_seed,
+  )
+  lognormal.model = add_criterion(lognormal.model, "loo")
+
+  exgaussian.model = brm(
+    ax_decision_duration ~ 0 + Intercept + (1 | user_id),
+    family = exgaussian,
+    data = plot_df,
+    seed = default_seed,
+  )
+  exgaussian.model = add_criterion(exgaussian.model, "loo")
+
+  shifted_lognormal.model = brm(
+    ax_decision_duration ~ 0 + Intercept + (1 | user_id),
+    family = shifted_lognormal,
+    data = plot_df,
+    seed = default_seed,
+  )
+  shifted_lognormal.model = add_criterion(shifted_lognormal.model, "loo")
+
+  print(loo_compare(lognormal.model,
+                    exgaussian.model,
+                    shifted_lognormal.model))
+
+  rm(lognormal.model, exgaussian.model, shifted_lognormal.model)
+  gc()
+}
+```
+
+From this, we can take away that:
+
+1. The distribution of counts is most likely a `shifted_lognormal`. The Exponential Gaussian null model did not converge in the number of iterations that we have assigned.
+1. Not sure what we're checking here - the difference between when things are chosen vs. not?
+
+Therefore, we assume the following structural model (TODO):
+
+$$ax\_time_i = TBD\_Distr(\mu_i, \phi)$$
+$$\begin{aligned}
+log(\mu_i) &= \beta_0 + \beta_{ax}\text{ax}_i + \beta_{dx}\text{dx}_i + \beta_{noise}\text{noise}_i +\\ &\beta_{ax:noise}\text{ax}_i\text{noise}_i + \beta_{dx:noise}\text{dx}_i\text{noise}_i + \\
+&\beta_{no}\text{no}_i + \mathbf{\beta_{demo}X_{demo,i}}
+\end{aligned}$$
+$$\begin{aligned}
+\beta_{.} &\sim Normal(0, 10)\\
+\phi &\sim Gamma(0.01, 0.01)
+\end{aligned}$$
+
+The prior for the $\phi$ parameter is the default used in `brms`; I see no need to change it.
+
+Model fitting:
+
+```{r, eval=train_models}
+# A null model to compare against
+ax_compliance_time.model.null = brm(
+  ax_decision_duration ~ 0 + Intercept + (1 | user_id),
+  family = shifted_lognormal,
+  prior = c(set_prior("normal(0, 10)", class = "b"),
+            set_prior("student_t(3, 0, 10)", class = "sd")),  # ndt = uniform(0, min(Y))
+  data = plot_df,
+  seed = default_seed,
+  save_all_pars = T,
+  sample_prior = T
+)
+ax_compliance_time.model.null = add_criterion(ax_compliance_time.model.null, "waic")
+ax_compliance_time.model.null = add_criterion(ax_compliance_time.model.null, "loo", reloo = T)
+saveModel(ax_compliance_time.model.null)
+
+# The trend model to see if there is a trend in the noise level variable
+ax_compliance_time.model.t = brm(
+  ax_decision_duration ~ 0 + Intercept + (has_dx * noise_level) + (gender + age_group + robot_experience) + num_optimal + state_idx_rescaled + chose_ax + (1 | user_id),
+  family = shifted_lognormal,
+  prior = c(set_prior("normal(0, 10)", class = "b"),
+            set_prior("student_t(3, 0, 10)", class = "sd")),  # ndt = uniform(0, min(Y))
+  data = plot_df,
+  seed = default_seed,
+  save_all_pars = T,
+  sample_prior = T
+)
+ax_compliance_time.model.t = add_criterion(ax_compliance_time.model.t, "waic")
+ax_compliance_time.model.t = add_criterion(ax_compliance_time.model.t, "loo", reloo = T)
+saveModel(ax_compliance_time.model.t)
+
+# The values model, to see if specific values of the noise level variable are significant
+ax_compliance_time.model.v = brm(
+  ax_decision_duration ~ 0 + Intercept + (has_dx * noise_level_f) + (gender + age_group + robot_experience) + num_optimal + state_idx_rescaled + chose_ax + (1 | user_id),
+  family = shifted_lognormal,
+  prior = c(set_prior("normal(0, 10)", class = "b"),
+            set_prior("student_t(3, 0, 10)", class = "sd")),  # ndt = uniform(0, min(Y))
+  data = plot_df,
+  seed = default_seed,
+  save_all_pars = T,
+  sample_prior = T
+)
+ax_compliance_time.model.v = add_criterion(ax_compliance_time.model.v, "waic")
+ax_compliance_time.model.v = add_criterion(ax_compliance_time.model.v, "loo", reloo = T)
+saveModel(ax_compliance_time.model.v)
+
+# A possible alternative to these models is one that does not include the optimal_ax
+# as a factor. There is likely no effect, because the data is but a subset of the data
+# used in the previous metric, and these models had nothing significant then.
+# ax_compliance_time.model.t = brm(
+#   ax_decision_duration ~ 0 + Intercept + ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal + state_idx_rescaled + (1 | user_id),
+#   family = shifted_lognormal,
+#   prior = c(set_prior("normal(0, 10)", class = "b"),
+#             set_prior("student_t(3, 0, 10)", class = "sd")),  # ndt = uniform(0, min(Y))
+#   data = plot_df,
+#   seed = default_seed,
+#   save_all_pars = T,
+#   sample_prior = T
+# )
+# ax_compliance_time.model.t = add_criterion(ax_compliance_time.model.t, "waic")
+# ax_compliance_time.model.t = add_criterion(ax_compliance_time.model.t, "loo", reloo = T)
+# 
+# ax_compliance_time.model.v = brm(
+#   ax_decision_duration ~ 0 + Intercept + ((has_dx + has_ax) * noise_level_f) + (gender + age_group + robot_experience) + num_optimal + state_idx_rescaled + (1 | user_id),
+#   family = shifted_lognormal,
+#   prior = c(set_prior("normal(0, 10)", class = "b"),
+#             set_prior("student_t(3, 0, 10)", class = "sd")),  # ndt = uniform(0, min(Y))
+#   data = plot_df,
+#   seed = default_seed,
+#   save_all_pars = T,
+#   sample_prior = T
+# )
+# ax_compliance_time.model.v = add_criterion(ax_compliance_time.model.v, "waic")
+# ax_compliance_time.model.v = add_criterion(ax_compliance_time.model.v, "loo", reloo = T)
+```
+```{r, eval=!train_models}
+# Load the models
+ax_compliance_time.model.null = loadModel("ax_compliance_time.model.null")
+ax_compliance_time.model.t = loadModel("ax_compliance_time.model.t")
+ax_compliance_time.model.v = loadModel("ax_compliance_time.model.v")
+```
+
+Model fitting results:
+
+```{r}
+# print(tidy_stan(ax_compliance_time.model.null))
+print(performance::r2(ax_compliance_time.model.null))
+
+# Print the parameters, and some initial diagnostics
+print(tidy_stan(ax_compliance_time.model.t, effects = "fixed"))
+print(performance::r2(ax_compliance_time.model.t))
+
+print(tidy_stan(ax_compliance_time.model.v, effects = "fixed"))
+print(performance::r2(ax_compliance_time.model.v))
+```
+
+Diagnostics of the fit:
+
+```{r fig.height=7, fig.width=15, eval=plot_diagnostics}
+# Alternative diagnostics: diagnostic_posterior(scenario_completed.model.v)
+
+# LOO cross-validation results
+print(ax_compliance_time.model.null$criteria$loo$estimates)
+print(ax_compliance_time.model.t$criteria$loo$estimates)
+print(ax_compliance_time.model.v$criteria$loo$estimates)
+print(loo_compare(ax_compliance_time.model.null,
+                  ax_compliance_time.model.t,
+                  ax_compliance_time.model.v))
+
+# Diagnostics of the sampling process
+par(mfrow=c(1,2))
+plot(ax_compliance_time.model.t$criteria$loo, main = "Trend Model")
+plot(ax_compliance_time.model.v$criteria$loo, main = "Values Model")
+
+# Include posterior predictive checks of the sampling (are sampling according
+# to the data that we actually have?)
+mcmc_intervals(as.matrix(ax_compliance_time.model.null), regex_pars = "b_", prob = 0.90, prob_outer = 0.95) +
+  ggtitle("Null Model")
+
+p1 = pp_check(ax_compliance_time.model.t, group = "has_ax", stat = "median") + ggtitle("t:has_ax")
+p2 = pp_check(ax_compliance_time.model.t, group = "has_dx") + ggtitle("t:has_dx")
+p3 = pp_check(ax_compliance_time.model.t, group = "noise_level") + ggtitle("t:noise_level")
+grid.arrange(p1, p2, p3, nrow = 3)
+mcmc_intervals(as.matrix(ax_compliance_time.model.t), regex_pars = "b_|^ndt", prob = 0.90, prob_outer = 0.95) +
+  ggtitle("Trends Model")
+
+p1 = pp_check(ax_compliance_time.model.v, group = "has_ax", stat = "median") + ggtitle("v:has_ax")
+p2 = pp_check(ax_compliance_time.model.v, group = "has_dx") + ggtitle("v:has_dx")
+p3 = pp_check(ax_compliance_time.model.v, group = "noise_level") + ggtitle("v:noise_level")
+grid.arrange(p1, p2, p3, nrow = 3)
+mcmc_intervals(as.matrix(ax_compliance_time.model.v), regex_pars = "b_|^ndt", prob = 0.90, prob_outer = 0.95) +
+  ggtitle("Values Model")
+
+# Plot predictions vs original
+preds_p_df = ax_compliance_time.model.null %>% predict() %>% as_tibble()
+p1 =
+  preds_p_df %>%
+    add_column(ax_response_time = ax_compliance_time.model.null$data$ax_decision_duration,
+               chose_ax = ax_compliance_time.model.v$data$chose_ax) %>%
+    ggplot(aes(x = ax_response_time, y = Estimate, color = chose_ax, group = chose_ax)) +
+      geom_point() +
+      scale_x_log10() + scale_y_log10() +
+      labs(y = "Predicted values") +
+      ggtitle("Null Model") +
+      theme(legend.position = "bottom")
+
+preds_p_df = ax_compliance_time.model.t %>% predict() %>% as_tibble()
+p3 =
+  preds_p_df %>%
+    add_column(ax_response_time = ax_compliance_time.model.t$data$ax_decision_duration,
+               chose_ax = ax_compliance_time.model.t$data$chose_ax) %>%
+    ggplot(aes(x = ax_response_time, y = Estimate, color = chose_ax, group = chose_ax)) +
+      geom_point() +
+      scale_x_log10() + scale_y_log10() +
+      labs(y = "Predicted values") +
+      ggtitle("Trends Model") +
+      legend_none()
+
+preds_p_df = ax_compliance_time.model.v %>% predict() %>% as_tibble()
+p5 =
+  preds_p_df %>%
+    add_column(ax_response_time = ax_compliance_time.model.v$data$ax_decision_duration,
+               chose_ax = ax_compliance_time.model.v$data$chose_ax) %>%
+    ggplot(aes(x = ax_response_time, y = Estimate, color = chose_ax, group = chose_ax)) +
+      geom_point() +
+      scale_x_log10() + scale_y_log10() +
+      labs(y = "Predicted values") +
+      ggtitle("Values Model") +
+      legend_none()
+
+grid.arrange(p1, p3, p5, nrow = 1, ncol = 3)
+```
+
+Inferences from the fitting:
+
+```{r, eval=report_bayesfactors}
+# Compute the bayes factor for each parameter value. Note: we compare
+# here against the ROPE, and not the degenerate null hypothesis of 0
+# Bayes-Factor values would be more significant in the latter case
+# According to the Raftery, 1995 rules
+# bf = 1 - 3: Weak
+# bf = 3 - 20: Positive
+# bf = 20 - 150: Strong
+# bf > 150: Very strong
+# The MAD is 4.89. This is more reasonable than the std. dev of 1.12
+print(bayesfactor_rope(ax_compliance_time.model.null, null = c(-0.49, 0.49)), n = 30)
+print(bayesfactor_rope(ax_compliance_time.model.t, null = c(-0.49, 0.49)), n = 30)
+print(bayesfactor_rope(ax_compliance_time.model.v, null = c(-0.49, 0.49)), n = 30)
+```
+```{r}
+options(digits = 3)
+# Check the significance of each hypothesis
+h_df = as_tibble(insight::get_parameters(ax_compliance_time.model.t)) %>%
+  transmute(
+    Intercept = b_Intercept,
+    has_dx_test = -2 * b_has_dx1,
+    noise_levelL_test = b_noise_level.L,
+    noise_levelQ_test = b_noise_level.Q,
+    chose_ax_test = -2 * b_chose_ax1
+  )
+
+hyp_results = test_hypotheses(h_df, rope_values = c(-0.49, 0.49))
+print(hyp_results %>% select(Parameter, pd, HDI_low, HDI_high, ROPE_Percentage, ROPE_Equivalence) %>% as.matrix())
+
+h_df = as_tibble(insight::get_parameters(ax_compliance_time.model.v)) %>%
+  transmute(
+    Intercept = b_Intercept,
+    has_dx_test = -2 * b_has_dx1,
+    noise_level1_test = b_noise_level_f1,
+    noise_level2_test = b_noise_level_f2,
+    noise_level3_test = - b_noise_level_f1 - b_noise_level_f2,
+    chose_ax_test = -2 * b_chose_ax1
+  )
+
+hyp_results = test_hypotheses(h_df, rope_values = c(-0.49, 0.49))
+print(hyp_results %>% select(Parameter, pd, HDI_low, HDI_high, ROPE_Percentage, ROPE_Equivalence) %>% as.matrix())
+options(digits = 7)
+```
+
+**Results**:
+
+There is no significant effect of any of the suggestions parameters on the time taken to pick an action. Based on [pd] values, insignificant effects exist of:
+
+1. An effect of choosing the suggestions (certain effect; p < .001)
+1. A linear relationship to noise (possible effect; p < .1)
+1. An effect of level 2 noise (likely effect; p < .05)
+
+(The ROPE is defined as [-0.49, 0.49]. It corresponds to a reaction time of slightly less than a second and is obtained from `0.1 \times MAD(ax\_response\_time)`. Therefore, a change of less than 0.55 actions in either direction is considered no different from a change of 0 in the number of actions)
+
+There are no plots to show (all effects are supposedly non-existent).
+
+```{r, echo=F, results=F, message=F, warning=F}
+rm(ax_compliance_time.model.null, ax_compliance_time.model.t, ax_compliance_time.model.v)
+gc()
+```
+
+
+## Time When Reliant on DX
+
+**How long did people take to pick diagnoses when they were reliant on suggestions?**
+
+```{r}
+plot_df = actions %>%
+  select(X1, id, user_id, study_condition, start_condition, num_optimal,
+         state_idx, state_idx_rescaled,
+         age_group, gender, robot_experience,
+         noise_level, noise_level_f, has_noise, has_dx, has_ax,
+         scenario_completed, num_actions, optimal_ax,
          decision_duration, ax_decision_duration) %>%
   mutate(optimal_ax = factor(optimal_ax))
 
@@ -3816,8 +4285,8 @@ print(performance::r2(ax_reliance_time.model.null))
 print(tidy_stan(ax_reliance_time.model.t, effects = "fixed"))
 print(performance::r2(ax_reliance_time.model.t))
 
-print(tidy_stan(ax_reliance_time.model.t, effects = "fixed"))
-print(performance::r2(ax_reliance_time.model.t))
+print(tidy_stan(ax_reliance_time.model.v, effects = "fixed"))
+print(performance::r2(ax_reliance_time.model.v))
 ```
 
 Diagnostics of the fit:
@@ -3841,7 +4310,7 @@ plot(ax_reliance_time.model.v$criteria$loo, main = "Values Model")
 # Include posterior predictive checks of the sampling (are sampling according
 # to the data that we actually have?)
 # mcmc_intervals(as.matrix(ax_reliance_time.model.null), regex_pars = "b_", prob = 0.90, prob_outer = 0.95) +
-  ggtitle("Null Model")
+#   ggtitle("Null Model")
 
 p1 = pp_check(ax_reliance_time.model.t, group = "has_ax", stat = "median") + ggtitle("t:has_ax")
 p2 = pp_check(ax_reliance_time.model.t, group = "has_dx") + ggtitle("t:has_dx")
@@ -3861,28 +4330,33 @@ mcmc_intervals(as.matrix(ax_reliance_time.model.v), regex_pars = "b_|^ndt", prob
 preds_p_df = ax_reliance_time.model.null %>% predict() %>% as_tibble()
 p1 =
   preds_p_df %>%
-    add_column(ax_response_time = ax_reliance_time.model.null$data$ax_decision_duration) %>%
-    ggplot(aes(x = ax_response_time, y = Estimate)) +
+    add_column(ax_response_time = ax_reliance_time.model.null$data$ax_decision_duration,
+               optimal_ax = ax_reliance_time.model.v$data$optimal_ax) %>%
+    ggplot(aes(x = ax_response_time, y = Estimate, color = optimal_ax, group = optimal_ax)) +
       geom_point() +
       scale_x_log10() + scale_y_log10() +
       labs(y = "Predicted values") +
-      ggtitle("Null Model")
+      ggtitle("Null Model") +
+      theme(legend.position = "bottom")
 
 preds_p_df = ax_reliance_time.model.t %>% predict() %>% as_tibble()
 p3 =
   preds_p_df %>%
-    add_column(ax_response_time = ax_reliance_time.model.t$data$ax_decision_duration) %>%
-    ggplot(aes(x = ax_response_time, y = Estimate)) +
+    add_column(ax_response_time = ax_reliance_time.model.t$data$ax_decision_duration,
+               optimal_ax = ax_reliance_time.model.t$data$optimal_ax) %>%
+    ggplot(aes(x = ax_response_time, y = Estimate, color = optimal_ax, group = optimal_ax)) +
       geom_point() +
       scale_x_log10() + scale_y_log10() +
       labs(y = "Predicted values") +
-      ggtitle("Trends Model")
+      ggtitle("Trends Model") +
+      legend_none()
 
 preds_p_df = ax_reliance_time.model.v %>% predict() %>% as_tibble()
 p5 =
   preds_p_df %>%
-    add_column(ax_response_time = ax_reliance_time.model.v$data$ax_decision_duration) %>%
-    ggplot(aes(x = ax_response_time, y = Estimate)) +
+    add_column(ax_response_time = ax_reliance_time.model.v$data$ax_decision_duration,
+               optimal_ax = ax_reliance_time.model.v$data$optimal_ax) %>%
+    ggplot(aes(x = ax_response_time, y = Estimate, color = optimal_ax, group = optimal_ax)) +
       geom_point() +
       scale_x_log10() + scale_y_log10() +
       labs(y = "Predicted values") +
@@ -3916,7 +4390,8 @@ h_df = as_tibble(insight::get_parameters(ax_reliance_time.model.t)) %>%
     has_ax_test = -2 * b_has_ax1,
     has_dx_test = -2 * b_has_dx1,
     noise_levelL_test = b_noise_level.L,
-    noise_levelQ_test = b_noise_level.Q
+    noise_levelQ_test = b_noise_level.Q,
+    optimal_ax_test = -2 * b_optimal_ax1
   )
 
 hyp_results = test_hypotheses(h_df, rope_values = c(-0.49, 0.49))
@@ -3929,7 +4404,8 @@ h_df = as_tibble(insight::get_parameters(ax_reliance_time.model.v)) %>%
     has_dx_test = -2 * b_has_dx1,
     noise_level1_test = b_noise_level_f1,
     noise_level2_test = b_noise_level_f2,
-    noise_level3_test = - b_noise_level_f1 - b_noise_level_f2
+    noise_level3_test = - b_noise_level_f1 - b_noise_level_f2,
+    optimal_ax_test = -2 * b_optimal_ax1
   )
 
 hyp_results = test_hypotheses(h_df, rope_values = c(-0.49, 0.49))
@@ -3939,7 +4415,12 @@ options(digits = 7)
 
 **Results**:
 
-There is no significant effect of any of the suggestions parameters on the time taken to pick an action. There is a certain effect of being reliant on the suggestions vs. not, but the effect is not significant.
+There is no significant effect of any of the suggestions parameters on the time taken to pick an action. Based on [pd] values, insignificant effects exist of:
+
+1. Choosing the optimal action (certain effect; p < 0.001)
+1. Having action suggestions (possible effect; p < .1)
+1. A quadratic relationship to noise (possible effect; p < .1)
+1. An effect of level 1 noise (possible effect; p < .1)
 
 (The ROPE is defined as [-0.49, 0.49]. It corresponds to a reaction time of slightly less than a second and is obtained from `0.1 \times MAD(ax\_response\_time)`. Therefore, a change of less than 0.55 actions in either direction is considered no different from a change of 0 in the number of actions)
 
